jlox/src/main/java/com/jlox/examples/fib_leak.lox
fun fib(n){
  if (n < 2) return n;
  return fib(n - 1) + fib(n - 2);
}

print fib(2);
print n; // error: the variable 'n' somehow leaks into globals
